@@ -7,7 +7,8 @@ CHANGELOG for Fall of Eden
 
 Version 0.4j
 ------------
-* 
+* Fixed a whole lot of bugs in Kiai
+* Fixed a bug that would lock out strapon action for Kiai
 
 --------------------------------------------
              PREVIOUS VERSIONS
